--- a/scss/header.scss
+++ b/scss/header.scss
@@ -15,7 +15,7 @@ a,button,input,textarea{
 	text-decoration: none;
 	outline: 0;
 	border: 0;
-	@include transition(color 0.4s ease, background-color 0.4s ease, border-color 0.4s ease);
+	@include transition(color 0.4s ease, background-color 0.4s ease, background-image 0.4s ease, border-color 0.4s ease);
 	&:focus{
 		outline: 0;
 		border: 0;
