--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,3 +73,5 @@ footer{
 //ALWAYS END
 @import "media.scss";
 @import "sketches.scss";
+@import "../app/libs/fancyBox/jquery.fancybox.css";
+@import "../app/libs/flickity/flickity.css";
