--- a/scss/_sketches.scss
+++ b/scss/_sketches.scss
@@ -149,27 +149,29 @@
 }
 
 /* ============================ input bottom =========================== */
-.bar{
-    position:relative;
-    display:block;
-    width:100%;
-}
-.bar:before, .bar:after     {
-  content:'';
-  height:2px; 
-  width:0;
-  bottom:1px; 
-  position:absolute;
-  background:#5264AE; 
-  @include transition(all .2s ease);
-}
-.bar:before {
-  left:50%;
-}
-.bar:after {
-  right:50%; 
-}
+form{
+	.bar{
+	    position:relative;
+	    display:block;
+	    width:100%;
+	}
+	.bar:before, .bar:after     {
+	  content:'';
+	  height:2px; 
+	  width:0;
+	  bottom:1px; 
+	  position:absolute;
+	  background:#5264AE; 
+	  @include transition(all .2s ease);
+	}
+	.bar:before {
+	  left:50%;
+	}
+	.bar:after {
+	  right:50%; 
+	}
 
-input:focus ~ .bar:before, input:focus ~ .bar:after {
-  width:50%;
+	input:focus ~ .bar:before, input:focus ~ .bar:after {
+	  width:50%;
+	}
 }
