--- a/scss/_sketches.scss
+++ b/scss/_sketches.scss
@@ -3,133 +3,91 @@
 
 /* ============================ thanks pages =========================== */
 #modal_callback_ok{
-    h3,h4{
-        font: 30px RobotoRegular,Arial,sans-serif;
-        text-align: center;
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
+    .top{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        position: relative;
+        &:after {
+            content: ''; 
+            position: absolute;
+            left: 48%; bottom: -20px;
+            border: 10px solid transparent;
+            border-top: 10px solid #fff;
+        }
+        i{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 70px;
+            height: 70px;
+            color: yellow;
+            border-radius: 50%;
+            background-color: #7dbaab;
+            box-sizing:border-box;
+            font-size: 22px;
+            margin: 0 auto;
+        }
+        h4{
+            font: 30px RobotoRegular,Arial,sans-serif;
+            font-weight: 700;
+            margin-top: 10px;
+        }
     }
-    h4{
-        font-weight: 700;
+    .bottom{
+        background-color: #7dbaab;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        h3{
+            font: 30px RobotoRegular,Arial,sans-serif;
+            text-align: center;
+            color: #fff;
+        }
     }
 }
 
 /* ============================ form css =========================== */
-.allert, .allert_tell {
-    position: absolute;
-    z-index: 20;
-    top: 15px;
-    display: block;
-    right: 18px;
-    height: 20px;
-    color: #FF6565;
-    cursor: default;
-}
-.er_border, .error {
-    border: 1px solid red!important;
-}
-.allert:hover, .allert_tell:hover{
-    text-decoration : none;
-}                 
-.allert span, .allert_tell span {
-    display: none;
-    opacity: 0;
-    padding : 5px;
-    margin-left : 5px;
-    color:#000;
-    font-style:italic;
-    font-size: 14px;
-    border-radius: 4px;
-    @include transition(all .5s ease);
-    min-width: 140px;
-    text-align: left;
-}
-.allert:hover span, .allert_tell:hover span {
-    border : 1px solid #FF6565;
-    background : #fff;
-    display : inline;
-    position : absolute;
-    color : #4e4e4e;
-    right:24px;
-    top:-6px;
-    opacity: 1;
-}
-.mess_error {
-    position: absolute;
-    z-index: 10;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.42857143;
-    text-align: left;
-    text-align: start;
-    text-decoration: none;
-    text-shadow: none;
-    text-transform: none;
-    letter-spacing: normal;
-    word-break: normal;
-    word-spacing: normal;
-    word-wrap: normal;
-    white-space: normal;
-    line-break: auto;
-    padding: 5px 10px;
-    opacity: 1;
-    left: 0;
-    top: 60px;
-    width: 97%;
-    box-sizing: border-box;
-}
-.tooltip-arrow {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    top: 0;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 0 5px 5px;
-    border-bottom-color: #FF6565;
-}
-.tooltip-inner {
-    padding: 3px 8px;
-    color: #FFF;
-    text-align: center;
-    background-color: #FF6565;
-    border-radius: 4px;
-    font-size: 15px;
-}
-.field {
-    position: relative;
-    float: left;
-}
-.section8 .tooltip-arrow {
-    border-bottom-color: #000;
-}
-.section8 .tooltip-inner {
-    background-color: #000;
-}
-.jb_input .field {
-    width: 100%;
-}
-.jb_input .mess_error {position: relative; width: 100%; padding: 5px 0px; top: -5px; float: left;}
-.fa-warning:before,.fa-exclamation-triangle:before {
-  content: "\f071";
-  font-family: FontAwesome;
-}
-
-/* ============================ form css media =========================== */
-@media only screen and (max-width : 992px) {
-    .allert, .allert_tell{
-        top: 0;
-    }
-    .field{
-        float: none;
-    }
-    .mess_error{
+form{
+    .field {
         position: relative;
-        width: 215px;
-        margin: 0 auto;
-        top: 0;
-        margin-bottom: 15px;
+    }
+    .allert{
+        display: block;
+        position: absolute;
+        z-index: 20;
+        top: 50%;
+        right: 5%;
+        margin-top: -21px;
+        color: #FF6565;
+        cursor: default;
+    }
+    .error {
+        border: 1px solid red !important;
+    }                 
+    .allert span{
+        display: none;
+        opacity: 0;
+        padding : 5px;
+        margin-left : 5px;
+        color:#000;
+        font-style:italic;
+        font-size: 14px;
+        border-radius: 4px;
+        min-width: 140px;
+        text-align: left;
+        @include transition(all .5s ease);
+    }
+    .allert:hover span{
+        border : 1px solid #FF6565;
+        background : #fff;
+        display : inline;
+        position : absolute;
+        color : #4e4e4e;
+        right:24px;
+        top:-6px;
+        opacity: 1;
     }
 }
 
@@ -158,4 +116,14 @@ form{
    input:focus ~ .bar:before, input:focus ~ .bar:after {
        width:50%;
    }
+}
+
+/* ============================ font-awesome =========================== */
+.fa-warning:before,.fa-exclamation-triangle:before {
+  content: "\f071";
+  font-family: FontAwesome;
+}
+.fa-check:before {
+  content: "\f00c";
+  font-family: FontAwesome;
 }
