--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,12 +2,12 @@
 @import "vars.scss";
 
 body{
-	font-size: 16px;
-	min-width: 320px;
 	position: relative;
+	overflow-x: hidden;
+	min-width: 320px;
+	font-size: 16px;
 	line-height: 1.6;
 	font-family: "RobotoRegular", sans-serif;
-	overflow-x: hidden;
 	background-color: #fff;
 }
 
@@ -22,6 +22,14 @@ a,button,input,textarea{
 	}
 }
 
+input,textarea{
+	box-sizing: border-box;
+}
+
+textarea{
+	resize:none;
+}
+
 button{
 	&:hover{
 		cursor: pointer;
@@ -34,7 +42,7 @@ button{
 
 .wrapper{
 	width: 960px;
-	margin: 0 auto;
 	overflow: hidden;
 	box-sizing: border-box;
+	margin: 0 auto;
 }
