--- a/scss/_sketches.scss
+++ b/scss/_sketches.scss
@@ -61,14 +61,20 @@ form{
     position: absolute;
     z-index: 20;
     top: 50%;
-    margin-top: -14px;
+    margin-top: -13px;
     right: 5%;
     color: #FF6565;
     cursor: default;
   }
   .error {
     border: 1px solid red !important;
-  }                 
+  }
+  .error_tel ~ .allert span{
+    min-width: 205px;
+  }    
+  .error_email ~ .allert span{
+    min-width: 140px;
+  }          
   .allert span{
     display: none;
     opacity: 0;
@@ -89,7 +95,7 @@ form{
     position : absolute;
     color : #4e4e4e;
     right:24px;
-    top:-6px;
+    top:-4px;
     opacity: 1;
   }
 }
@@ -97,28 +103,28 @@ form{
 /* ============================ input bottom =========================== */
 form{
   .bar{
-   position:relative;
-   display:block;
-   width:100%;
- }
- .bar:before, .bar:after     {
-  content:'';
-  height:2px; 
-  width:0;
-  bottom:1px; 
-  position:absolute;
-  background:#5264AE; 
-  @include transition(all .2s ease);
-}
-.bar:before {
- left:50%;
-}
-.bar:after {
- right:50%; 
-}
-input:focus ~ .bar:before, input:focus ~ .bar:after {
- width:50%;
-}
+    position:relative;
+    display:block;
+    width:100%;
+  }
+  .bar:before, .bar:after{
+    content:'';
+    height:2px; 
+    width:0;
+    bottom:1px; 
+    position:absolute;
+    background:#5264AE; 
+    @include transition(all .2s ease);
+  }
+  .bar:before{
+    left:50%;
+  }
+  .bar:after{
+    right:50%;
+  }
+  input:focus ~ .bar:before, input:focus ~ .bar:after{
+    width:50%;
+  }
 }
 
 /* ============================ font-awesome =========================== */
