--- a/app/css/header.css
+++ b/app/css/header.css
@@ -1,21 +1,38 @@
 body {
-  font-size: 16px;
-  min-width: 275px;
   position: relative;
+  overflow-x: hidden;
+  min-width: 320px;
+  font-size: 16px;
   line-height: 1.6;
   font-family: "RobotoRegular", sans-serif;
-  overflow-x: hidden;
   background-color: #fff; }
 
-body a {
+a, button, input, textarea {
   text-decoration: none;
-  -webkit-transition: color 0.4s ease, background-color 0.4s ease, border-color 0.4s ease;
-  transition: color 0.4s ease, background-color 0.4s ease, border-color 0.4s ease; }
+  outline: 0;
+  border: 0;
+  -webkit-transition: color 0.4s ease, background-color 0.4s ease, background-image 0.4s ease, border-color 0.4s ease;
+  transition: color 0.4s ease, background-color 0.4s ease, background-image 0.4s ease, border-color 0.4s ease; }
+  a:focus, button:focus, input:focus, textarea:focus {
+    outline: 0;
+    border: 0; }
+
+input, textarea {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+textarea {
+  resize: none; }
+
+button:hover {
+  cursor: pointer; }
 
 .hidden {
   display: none; }
 
 .wrapper {
   width: 960px;
-  margin: 0 auto;
-  overflow: hidden; }
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 auto; }
