--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,193 +1,260 @@
-*::-webkit-input-placeholder {
-  color: #666;
-  opacity: 1; }
+@import url(../libs/fancyBox/jquery.fancybox.css);
+footer {
+  width: 100%;
+  overflow: hidden;
+  padding-top: 29px;
+  padding-bottom: 39px;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-color: #000; }
+  footer .wrapper {
+    position: relative; }
+  footer ul {
+    float: left;
+    margin-top: 19px;
+    padding-left: 0;
+    padding-right: 0; }
+    footer ul li {
+      float: left;
+      margin-right: 51px; }
+      footer ul li a {
+        color: white;
+        font-family: RobotoRegular;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 27px;
+        letter-spacing: 0.01em; }
+      footer ul li a:hover {
+        color: #fff; }
+  footer h3 {
+    position: absolute;
+    color: white;
+    font-family: RobotoRegular;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 27px;
+    top: 46px;
+    letter-spacing: 0.01em; }
+  footer .gs {
+    float: right;
+    margin: 9px;
+    margin-right: 9px;
+    display: block;
+    margin-top: 29px; }
+  footer .gs svg {
+    width: 113px;
+    /* size */
+    opacity: 0.8;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s; }
+  footer .gs_white path {
+    fill: #FFFFFF; }
+  footer .gs_black path {
+    fill: #000; }
+  footer .gs_white:hover svg {
+    opacity: 1;
+    -webkit-filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.3));
+    filter: drop-shadow(0px 0px 6px rgba(255, 255, 255, 0.3)); }
+  footer .gs_black:hover svg {
+    opacity: 1;
+    -webkit-filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.3));
+    filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.3)); }
 
-*:-moz-placeholder {
-  color: #666;
-  opacity: 1; }
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: translate(-200%, 0%);
+    transform: translate(-200%, 0%); }
+  50% {
+    -webkit-transform: translate(800%, 0%);
+    transform: translate(800%, 0%); }
+  100% {
+    -webkit-transform: translate(-200%, 0%);
+    transform: translate(-200%, 0%); } }
 
-*::-moz-placeholder {
-  color: #666;
-  opacity: 1; }
+@keyframes slide {
+  0% {
+    -webkit-transform: translate(-200%, 0%);
+    transform: translate(-200%, 0%); }
+  50% {
+    -webkit-transform: translate(800%, 0%);
+    transform: translate(800%, 0%); }
+  100% {
+    -webkit-transform: translate(-200%, 0%);
+    transform: translate(-200%, 0%); } }
+  footer .gs_spots svg {
+    fill: rgba(255, 255, 255, 0.7); }
+  footer #blick {
+    -webkit-transform: translate(-100%, 0%);
+    -ms-transform: translate(-100%, 0%);
+    transform: translate(-100%, 0%);
+    fill: #fff;
+    -webkit-box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px black; }
+  footer .gs_spots:hover #blick {
+    -webkit-animation: slide 1s ease infinite reverse;
+    animation: slide 1s ease infinite reverse;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s; }
 
-*:-ms-input-placeholder {
-  color: #666;
-  opacity: 1; }
+/* ============================ thanks pages =========================== */
+#modal_callback_ok {
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto; }
+  #modal_callback_ok .top {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: relative; }
+    #modal_callback_ok .top:after {
+      content: '';
+      position: absolute;
+      left: 48%;
+      bottom: -20px;
+      border: 10px solid transparent;
+      border-top: 10px solid #fff; }
+    #modal_callback_ok .top i {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      width: 80px;
+      height: 80px;
+      color: yellow;
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+      background-color: #7dbaab;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      font-size: 28px;
+      margin: 0 auto; }
+    #modal_callback_ok .top h4 {
+      font: 30px RobotoRegular,Arial,sans-serif;
+      font-weight: 700;
+      margin-top: 10px; }
+  #modal_callback_ok .bottom {
+    background-color: #7dbaab;
+    padding-top: 15px;
+    padding-bottom: 15px; }
+    #modal_callback_ok .bottom h3 {
+      font: 30px RobotoRegular,Arial,sans-serif;
+      text-align: center;
+      color: #fff; }
 
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-  color: #666; }
+/* ============================ form css =========================== */
+form .form_input .field {
+  display: block;
+  float: left;
+  position: relative;
+  overflow: hidden; }
+  form .form_input .field .allert {
+    display: block;
+    position: absolute;
+    z-index: 20;
+    top: 50%;
+    margin-top: -13px;
+    right: 13%;
+    color: #FF6565;
+    cursor: default; }
+    form .form_input .field .allert:hover span {
+      border: 1px solid #FF6565;
+      background: #fff;
+      display: inline;
+      position: absolute;
+      color: #4e4e4e;
+      right: 24px;
+      top: -4px;
+      opacity: 1; }
+    form .form_input .field .allert span {
+      display: none;
+      opacity: 0;
+      padding: 5px;
+      margin-left: 5px;
+      color: #000;
+      font-style: italic;
+      font-size: 14px;
+      -webkit-border-radius: 4px;
+      border-radius: 4px;
+      min-width: 140px;
+      text-align: left;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+  form .form_input .field .error {
+    border: 1px solid red !important; }
+  form .form_input .field .error_tel ~ .allert span {
+    min-width: 205px; }
+  form .form_input .field .error_email ~ .allert span {
+    min-width: 140px; }
 
-body input:required:valid,
-body textarea:required:valid {
-  color: #666; }
+/* ============================ input bottom =========================== */
+form .bar {
+  position: relative;
+  display: block;
+  width: 100%; }
 
-/*==========  Desktop First Method  ==========*/
-/* Large Devices, Wide Screens */
-/* Medium Devices, Desktops */
+form .bar:before, form .bar:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #5264AE;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
+
+form .bar:before {
+  left: 50%; }
+
+form .bar:after {
+  right: 50%; }
+
+form input:focus ~ .bar:before, form input:focus ~ .bar:after {
+  width: 50%; }
+
+/* ============================ font-awesome =========================== */
+.fa-warning:before, .fa-exclamation-triangle:before {
+  content: "\f071";
+  font-family: FontAwesome; }
+
+.fa-check:before {
+  content: "\f00c";
+  font-family: FontAwesome; }
+
 @media only screen and (max-width: 992px) {
   .wrapper {
-    width: auto; } }
+    width: auto; }
+  .pad {
+    padding: 50px 5px !important; }
+  footer {
+    text-align: center; }
+    footer .wrapper {
+      width: auto; }
+    footer ul {
+      float: none;
+      display: inline-block;
+      text-align: center; }
+      footer ul li {
+        margin-bottom: 10px;
+        margin-right: 0;
+        float: none; }
+    footer .gs {
+      float: none;
+      display: block; }
+    footer svg {
+      fill: #fff; }
+    footer h3 {
+      display: none; } }
 
-/* Small Devices, Tablets */
-/* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
   .pad {
     padding: 20px 5px !important; }
-  /*Disable Animation on Mobile Devices*/
-  .animated {
-    /*CSS transitions*/
-    -webkit-transition-property: none !important;
-    transition-property: none !important;
-    /*CSS transforms*/
-    -ms-transform: none !important;
-    -webkit-transform: none !important;
-    transform: none !important;
-    /*CSS animations*/
-    -webkit-animation: none !important;
-    animation: none !important; } }
-
-/* Custom, iPhone Retina */
-/*==========  Mobile First Method  ==========*/
-/* Custom, iPhone Retina */
-/* Extra Small Devices, Phones */
-/* Small Devices, Tablets */
-/* Medium Devices, Desktops */
-/* Large Devices, Wide Screens */
-/* ============================ form css =========================== */
-#modal_callback_ok h3 {
-  font: 30px RobotoRegular,Arial,sans-serif;
-  text-align: center; }
-
-.allert, .allert_tell {
-  position: absolute;
-  z-index: 20;
-  top: 15px;
-  display: block;
-  right: 18px;
-  height: 20px;
-  color: #FF6565;
-  cursor: default; }
-
-.er_border, .error {
-  border: 1px solid red !important; }
-
-.allert:hover, .allert_tell:hover {
-  text-decoration: none; }
-
-.allert span, .allert_tell span {
-  display: none;
-  opacity: 0;
-  padding: 5px;
-  margin-left: 5px;
-  color: #000;
-  font-style: italic;
-  font-size: 14px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  min-width: 140px;
-  text-align: left; }
-
-.allert:hover span, .allert_tell:hover span {
-  border: 1px solid #FF6565;
-  background: #fff;
-  display: inline;
-  position: absolute;
-  color: #4e4e4e;
-  right: 24px;
-  top: -6px;
-  opacity: 1; }
-
-.mess_error {
-  position: absolute;
-  z-index: 10;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.42857143;
-  text-align: left;
-  text-align: start;
-  text-decoration: none;
-  text-shadow: none;
-  text-transform: none;
-  letter-spacing: normal;
-  word-break: normal;
-  word-spacing: normal;
-  word-wrap: normal;
-  white-space: normal;
-  line-break: auto;
-  padding: 5px 10px;
-  opacity: 1;
-  left: 0;
-  top: 60px;
-  width: 97%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.tooltip-arrow {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-  top: 0;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 0 5px 5px;
-  border-bottom-color: #FF6565; }
-
-.tooltip-inner {
-  padding: 3px 8px;
-  color: #FFF;
-  text-align: center;
-  background-color: #FF6565;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  font-size: 15px; }
-
-.field {
-  position: relative;
-  float: left; }
-
-.section8 .tooltip-arrow {
-  border-bottom-color: #000; }
-
-.section8 .tooltip-inner {
-  background-color: #000; }
-
-.jb_input .field {
-  width: 100%; }
-
-.jb_input {
-  /*   overflow: hidden;*/ }
-
-.jb_input .mess_error {
-  position: relative;
-  width: 100%;
-  padding: 5px 0px;
-  top: -5px;
-  float: left; }
-
-/* ============================ form css media =========================== */
-@media only screen and (max-width: 992px) {
-  .allert, .allert_tell {
-    top: 0; }
-  .field {
-    float: none; }
-  .mess_error {
-    position: relative;
-    width: 215px;
-    margin: 0 auto;
-    top: 0;
-    margin-bottom: 15px; } }
-
-@media only screen and (max-width: 320px) {
-  #modal_callback_ok {
-    height: 200px; }
-  .fancybox-inner {
-    width: auto !important; }
   .fancybox-close {
     top: 0 !important;
     right: 0 !important; } }
